syntax = "proto3";
package Models;
option go_package = "../;Models";

message ProdModel{
  // @inject_tag: json:"pid"
  int32 ProdId = 1;
  // @inject_tag: json:"pname"
  string ProdName = 2;
}

// 休闲鞋
message ProdRequest{
  int32 size = 1;
}

message ProdListResponse{
  repeated ProdModel data = 1;
}