syntax = "proto3";
package Services;
option go_package = "../;Services";
import "Models.proto";

message ProdRequest{
  // @inject_tag: json:"size", form:"size"
  int32 size = 1;
}

message ProdListResponse{
  repeated Services.ProdModel data =1;
}

service ProdService{
  rpc GetProdList (ProdRequest) returns (ProdListResponse);
}